simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: sim
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: buildz.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sim-app
            port:
              number: 3000
